--- a/init.yml
+++ b/init.yml
@@ -7,7 +7,7 @@
   tasks:
 
     - name: Get config for VyOS devices
-      vyos.vyos.vyos_facts:
+      cisco.ios.ios_facts:
         gather_subset: all
 
     - name: Display the config
