--- a/init.yml
+++ b/init.yml
@@ -4,11 +4,6 @@
   connection: ansible.netcommon.network_cli
   gather_facts: false
   tasks:
-
-    - name: Get config for VyOS devices
-      cisco.ios.ios_facts:
-        gather_subset: all
-
-    - name: Display the config
-      debug:
-        msg: "The hostname is {{ ansible_net_hostname }} and the OS is {{ ansible_net_version }}"
+  - name: run show version on remote devices
+    ios_command:
+      commands: show version
