--- a/init.yml
+++ b/init.yml
@@ -3,6 +3,7 @@
 - name: Network Getting Started First Playbook
   connection: ansible.netcommon.network_cli
   gather_facts: false
+  hosts: all
   tasks:
   - name: run show version on remote devices
     ios_command:
