--- a/init.yml
+++ b/init.yml
@@ -3,7 +3,7 @@
 - name: Network Getting Started First Playbook
   connection: network_cli
   gather_facts: false
-  hosts: all
+  hosts: {{host}}
   tasks:
   - name: run show version on remote devices
     ios_command:
